@@ -136,10 +136,46 @@ Don't touch these lines:
 							<entry>
 								Opens the log dialog. The <option>/path</option> specifies the
 								file or folder for which the log should be shown.
-								Three additional options can be set:
+								Six additional options can be set:
 								<option>/startrev:xxx</option>, 
-								<option>/endrev:xxx</option> and
-								<option>/strict</option>
+								<option>/endrev:xxx</option>,
+								<option>/strict</option> (enables the 'stop-on-copy' checkbox),
+								<option>/findstring:"filterstring"</option> fills in the filter text,
+								<option>/findtext</option> (forces the filter to use text, not regex) and
+								<option>/findtype:X</option> with X being a number between 1 and 7. The numbers
+								correspond to:
+								<itemizedlist>
+									<listitem>
+										<para>
+											<option>/findtype:1</option> filter by everything
+										</para>
+									</listitem>
+									<listitem>
+										<para>
+											<option>/findtype:2</option> filter by messages
+										</para>
+									</listitem>
+									<listitem>
+										<para>
+											<option>/findtype:3</option> filter by path
+										</para>
+									</listitem>
+									<listitem>
+										<para>
+											<option>/findtype:4</option> filter by authors
+										</para>
+									</listitem>
+									<listitem>
+										<para>
+											<option>/findtype:5</option> filter by revisions
+										</para>
+									</listitem>
+									<listitem>
+										<para>
+											<option>/findtype:7</option> filter by bug ID
+										</para>
+									</listitem>
+								</itemizedlist>
 							</entry>
 						</row>
 						<row>
